--- a/app/partials/footer.ejs
+++ b/app/partials/footer.ejs
@@ -3,9 +3,7 @@
     unescape("%26%63%6F%70%79%3B%20%43%6F%70%79%72%69%67%68%74%20") +
     new Date().getFullYear() +
     " <%= name %>" +
-    unescape(
-      "%3C%62%72%20%2F%3E%0A%50%6F%77%65%72%65%64%20%62%79%0A%3C%61%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%20%6E%6F%6E%65%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%67%69%74%68%75%62%2E%63%6F%6D%2F%7A%61%63%68%65%79%30%31%2F%6D%69%6D%69%63%6D%73%22%0A%20%20%3E%4D%69%6D%69%43%4D%53%3C%2F%61%0A%3E%3C%74%69%74%6C%65%3E"
-    ) +
+    '<br /> Powered by <a style="text-decoration: none" href="https://github.com/zachey01/" >MimiCMS</a ><title>' +
     "<%= name %>" +
     unescape("%3C%2F%74%69%74%6C%65%3E");
 </script>
