--- a/partials/products.ejs
+++ b/partials/products.ejs
@@ -7,38 +7,33 @@
           <h4><%= product.name %></h4>
           <code><%= product.price %><%= currency %></code>
           <div class="d-flex justify-content-between align-items-center">
-              <button class="btn btn-sm btn-outline-secondary" id="debitBtn" <% if (balance < product.price) { %>
-    data-toggle="modal" data-target="#notEnoughBalanceModal"
-  <% } %>>Купить</button>
+            <button class="btn btn-sm btn-outline-secondary" id="buyBtn<%= product.id %>" <% if (balance < product.price) { %>
+              data-toggle="modal" data-target="#notEnoughBalanceModal"
+            <% } %> data-id="<%= product.id %>">Купить</button>
           </div>
         </div>
       </div>
     </div>
     <script>
-  $(document).ready(function () {
-    $("#buyBtn<%= product.id %>").click(function () {
-      $.ajax({
-        type: "POST",
-        url: `/debit/<%= product.price %>`,
-        success: function (data) {
-          window.location.reload();
-        },
-      });
-    });
+document.addEventListener("DOMContentLoaded", function () {
+  const buyBtn = document.querySelector("#buyBtn<%= product.id %>");
+  buyBtn.addEventListener("click", function () {
+    const xhr = new XMLHttpRequest();
+    xhr.open("POST", `/debit/<%= product.price %>/<%= product.id %>`);
+    xhr.onload = function () {
+      if (xhr.status === 200) {
+        window.location.reload();
+      }
+    };
+    xhr.send();
   });
+});
 </script>
     <% }); %>
   </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script
-  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-  integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-  crossorigin="anonymous"
-></script>
-
-<!-- Modal -->
+<!-- Err window -->
 <div class="modal fade" id="notEnoughBalanceModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -57,4 +52,3 @@
     </div>
   </div>
 </div>
-
