--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -3,6 +3,7 @@
 >
   <div class="container-fluid">
     <%- include('./modules/headerLogo.ejs'); %>
+
     <button
       class="navbar-toggler"
       type="button"
@@ -16,13 +17,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <%- include('./modules/headerBtn.ejs'); %>
-      <li class="nav-item" style="list-style-type: none">
-        <a class="nav-link balance" href="/balance"
-          ><%= balance %> <%= currency %></a
-        >
-      </li>
 
-      <div class="d-flex">
+      <div class="d-flex avatar-container">
         <div class="dropdown">
           <button
             class="btn btn-light toggle"
@@ -32,7 +28,7 @@
           >
             <img
               src="<%= avatar %>"
-              class="rounded-circle"
+              class="rounded-circle avatar"
               width="50"
               height="50"
             />
@@ -85,6 +81,18 @@
             </li>
           </ul>
         </div>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="/balance"
+              role="button"
+              aria-expanded="false"
+              title="Shop"
+              ><%= balance %><%= currency %>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
