--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,15 +51,24 @@ h6 {
 
 a.nav-link {
   color: gray;
-  font-size: 7px;
-  padding: 0;
+  font-size: 18px;
+}
+
+.avatar-container {
+  margin-left: 50%;
+}
+
+@media (max-width: 987px) {
+  .avatar-container {
+    margin-left: 0%;
+  }
 }
 
 .avatar {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  border: 2px solid #e84118;
+  border: 2px solid #2071ce;
   padding: 2px;
   flex: none;
 }
@@ -95,6 +104,10 @@ input:focus {
 
 .card-title {
   font-size: 1.5rem;
+}
+
+.balance {
+  font-size: 15px;
 }
 
 .form-group {
